[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/Player_ship.gd" type="Script" id=1]
[ext_resource path="res://player/Player_laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://gfx/Player_ship.png" type="Texture" id=3]
[ext_resource path="res://sounds/Player_shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://gfx/Player_ship_explosion.png" type="Texture" id=5]
[ext_resource path="res://sounds/player_explosion2.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "center"

[sub_resource type="Animation" id=2]
resource_name = "explosion"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ShipExplosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.41902, 5.8291 )

[node name="Player" type="Area2D"]
position = Vector2( 160, 160 )
z_index = 1
input_pickable = false
collision_mask = 10
script = ExtResource( 1 )
Laser = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/center = SubResource( 1 )
anims/explosion = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.14447 )
shape = SubResource( 5 )

[node name="ShootCadence" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -14.136

[node name="ShipExplosion" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
hframes = 6

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.019
[connection signal="area_shape_entered" from="." to="." method="_on_Player_area_shape_entered"]
